@@ -369,7 +369,7 @@
                 "name": "frameDetached",
                 "description": "Fired when frame has been detached from its parent.",
                 "parameters": [
-                    { "name": "frameId", "type": "string", "description": "If of the frame that has been detached." }
+                    { "name": "frameId", "type": "string", "description": "Id of the frame that has been detached." }
                 ]
             },
             {
@@ -915,7 +915,140 @@
     },
     {
         "domain": "CSS",
-        "types": [],
+        "description": "This domain exposes CSS read/write operations. All CSS objects, like stylesheets, rules, and styles, have an associated <code>id</code> used in subsequent operations on the related object. Each object type has a specific <code>id</code> structure, and those are not interchangeable between objects of different kinds. CSS objects can be loaded using the <code>get*ForNode()</code> calls (which accept a DOM node id). Alternatively, a client can discover all the existing stylesheets with the <code>getAllStyleSheets()</code> method and subsequently load the required stylesheet contents using the <code>getStyleSheet[Text]()</code> methods.",
+        "types": [
+            {
+                "id": "CSSStyleId",
+                "type": "object",
+                "properties": {
+                    "styleSheetId": { "type": "string", "description": "Enclosing stylesheet identifier." },
+                    "ordinal": { "type": "integer", "description": "The style ordinal within the stylesheet." }
+                },
+                "description": "This object identifies a CSS style in a unique way."
+            },
+            {
+                "id": "CSSRuleId",
+                "type": "object",
+                "properties": {
+                    "styleSheetId": { "type": "string", "description": "Enclosing stylesheet identifier." },
+                    "ordinal": { "type": "integer", "description": "The rule ordinal within the stylesheet." }
+                },
+                "description": "This object identifies a CSS rule in a unique way."
+            },
+            {
+                "id": "CSSNodeStyles",
+                "type": "object",
+                "properties": {
+                    "inlineStyle": { "$ref": "CSSStyle", "optional": true, "description": "The node's inline style, if any." },
+                    "computedStyle": { "$ref": "CSSComputedStyle", "description": "The node's computed style." },
+                    "matchedCSSRules": { "type": "array", "items": { "$ref": "CSSRule" }, "description": "CSS rules matching this node, from all applicable stylesheets." },
+                    "styleAttributes": { "type": "array", "items": { "$ref": "CSSStyleAttribute" }, "description": "Entries for style-related element attributes (e.g. width=20)."},
+                    "pseudoElements": { "type": "array", "items": { "$ref": "PseudoIdRules" }, "description": "Pseudo style rules for this node." },
+                    "inherited": { "type": "array", "items": { "$ref": "InheritedStyleEntry" }, "description": "A chain of inherited styles (from the immediate node parent up to the DOM tree root)." }
+                },
+                "description": "A holder for all CSS styles applicable to a particular DOM node."
+            },
+            {
+                "id": "PseudoIdRules",
+                "type": "object",
+                "properties": {
+                    "pseudoId": { "type": "integer", "description": "Pseudo style identifier (see <code>enum PseudoId</code> in <code>RenderStyleConstants.h</code>)."},
+                    "rules": { "type": "array", "items": { "$ref": "CSSRule" }, "description": "CSS rules applicable to the pseudo style."}
+                },
+                "description": "CSS rule collection for a single pseudo style."
+            },
+            {
+                "id": "InheritedStyleEntry",
+                "type": "object",
+                "properties": {
+                    "inlineStyle": { "$ref": "CSSStyle", "optional": true, "description": "The ancestor node's inline style, if any, in the style inheritance chain." },
+                    "matchedCSSRules": { "type": "array", "items": { "$ref": "CSSRule" }, "description": "CSS rules matching the ancestor node in the style inheritance chain." }
+                },
+                "description": "CSS rule collection for a single pseudo style."
+            },
+            {
+                "id": "CSSStyleAttribute",
+                "type": "object",
+                "properties": {
+                    "name": { "type": "string", "description": "DOM attribute name (e.g. \"width\")."},
+                    "style": { "$ref": "CSSStyle", "description": "CSS style generated by the respective DOM attribute."}
+                },
+                "description": "CSS style information for a DOM style attribute."
+            },
+            {
+                "id": "CSSStyleSheetHeader",
+                "type": "object",
+                "properties": {
+                    "styleSheetId": { "type": "string", "description": "The stylesheet identifier."},
+                    "sourceURL": { "type": "string", "description": "Stylesheet resource URL."},
+                    "title": { "type": "string", "description": "Stylesheet title."},
+                    "disabled": { "type": "boolean", "description": "Denotes whether the stylesheet is disabled."}
+                },
+                "description": "CSS stylesheet metainformation."
+            },
+            {
+                "id": "CSSStyleSheetBody",
+                "type": "object",
+                "properties": {
+                    "styleSheetId": { "type": "string", "description": "The stylesheet identifier."},
+                    "rules": { "type": "array", "items": { "$ref": "CSSRule" }, "description": "Stylesheet resource URL."},
+                    "text": { "type": "string", "optional": true, "description": "Stylesheet resource contents (if available)."}
+                },
+                "description": "CSS stylesheet contents."
+            },
+            {
+                "id": "CSSRule",
+                "type": "object",
+                "properties": {
+                    "ruleId": { "$ref": "CSSRuleId", "description": "The CSS rule identifier."},
+                    "selectorText": { "type": "string", "description": "Rule selector."},
+                    "sourceURL": { "type": "string", "optional": true, "description": "Parent stylesheet resource URL (for regular rules)."},
+                    "sourceLine": { "type": "integer", "description": "Line ordinal of the rule selector start character in the resource."},
+                    "origin": { "type": "string", "description": "The parent stylesheet type: \"user\" for user stylesheets, \"user-agent\" for user-agent stylesheets, \"inspector\" for stylesheets created by the inspector (i.e. those holding new rules created with <code>addRule()</code>), \"\" for regular stylesheets. // FIXME"},
+                    "style": { "$ref": "CSSStyle", "description": "Associated style declaration." },
+                    "selectorRange": { "$ref": "SourceRange", "optional": true, "description": "The rule selector range in the underlying resource (if available)." }
+                },
+                "description": "CSS rule representation."
+            },
+            {
+                "id": "SourceRange",
+                "type": "object",
+                "properties": {
+                    "start": { "type": "integer", "description": "Start of range (inclusive)."},
+                    "end": { "type": "integer", "description": "End of range (exclusive)."}
+                },
+                "description": "Text range within a resource."
+            },
+            {
+                "id": "CSSStyle",
+                "type": "object",
+                "properties": {
+                    "styleId": { "$ref": "CSSStyleId", "description": "The CSS style identifier."},
+                    "cssProperties": { "type": "array", "items": { "$ref": "CSSProperty" }, "description": "CSS properties in the style."},
+                    "shorthandEntries": { "type": "array", "items": { "$ref": "ShorthandEntry" }, "description": "Computed values for all shorthands found in the style." },
+                    "cssText": { "type": "string", "optional": true, "description": "Style declaration text (if available)."},
+                    "range": { "$ref": "SourceRange", "optional": true, "description": "Style declaration range in the enclosing stylesheet (if available)." },
+                    "width": { "type": "integer", "description": "The effective \"width\" property value from this style." },
+                    "height": { "type": "integer", "description": "The effective \"height\" property value from this style." }
+                },
+                "description": "CSS style representation."
+            },
+            {
+                "id": "CSSProperty",
+                "type": "object",
+                "properties": {
+                    "name": { "type": "string", "description": "The property name." },
+                    "value": { "type": "string", "description": "The property value." },
+                    "priority": { "type": "string", "optional": true, "description": "The property priority (implies \"\" if absent)." },
+                    "implicit": { "type": "boolean", "optional": true, "description": "Whether the property is implicit (implies <code>false</code> if absent)." },
+                    "parsedOk": { "type": "boolean", "optional": true, "description": "Whether the property is understood by the browser (implies <code>true</code> if absent)." },
+                    "status": { "type": "string", "optional": true, "description": "The property status: \"active\" (implied if absent) if the property is effective in the style, \"inactive\" if the property is overridden by a same-named property in this style later on, \"disabled\" if the property is disabled by the user, \"style\" if the property is reported by the browser rather than by the CSS source parser. // FIXME" },
+                    "shorthandName": { "type": "string", "description": "The related shorthand property name (absent if this property is not a longhand)." },
+                    "range": { "$ref": "SourceRange", "optional": true, "description": "The entire property range in the enclosing style declaration (if available)." }
+                },
+                "description": "CSS style effective visual dimensions and source offsets."
+            }
+        ],
         "commands": [
             {
                 "name": "getStylesForNode",
@@ -923,8 +1056,9 @@
                     { "name": "nodeId", "type": "integer" }
                 ],
                 "returns": [
-                    { "name": "styles", "$ref": "CSSNodeStyles" }
-                ]
+                    { "name": "styles", "$ref": "CSSNodeStyles", "description": "All styles for the specified DOM node." }
+                ],
+                "description": "Returns all styles for a DOM node identified by <code>nodeId</code>."
             },
             {
                 "name": "getComputedStyleForNode",
@@ -932,8 +1066,9 @@
                     { "name": "nodeId", "type": "integer" }
                 ],
                 "returns": [
-                    { "name": "style", "$ref": "CSSComputedStyle" }
-                ]
+                    { "name": "style", "$ref": "CSSStyle", "description": "Computed style for the specified DOM node." }
+                ],
+                "description": "Returns the computed style for a DOM node identified by <code>nodeId</code>."
             },
             {
                 "name": "getInlineStyleForNode",
@@ -941,14 +1076,16 @@
                     { "name": "nodeId", "type": "integer" }
                 ],
                 "returns": [
-                    { "name": "style", "$ref": "CSSStyle" }
-                ]
+                    { "name": "style", "$ref": "CSSStyle", "description": "Inline style for the specified DOM node." }
+                ],
+                "description": "Returns the inline style (if present) for a DOM node identified by <code>nodeId</code>."
             },
             {
                 "name": "getAllStyleSheets",
                 "returns": [
-                    { "name": "styleSheetInfos", "type": "array", "items": { "$ref": "CSSStyleSheetInfo" } }
-                ]
+                    { "name": "styleSheetInfos", "type": "array", "items": { "$ref": "CSSStyleSheetHeader" }, "description": "Descriptor entries for all available stylesheets." }
+                ],
+                "description": "Returns metainfo entries for all known stylesheets."
             },
             {
                 "name": "getStyleSheet",
@@ -956,8 +1093,9 @@
                     { "name": "styleSheetId", "type": "string" }
                 ],
                 "returns": [
-                    { "name": "styleSheet", "$ref": "CSSStyleSheet" }
-                ]
+                    { "name": "styleSheet", "$ref": "CSSStyleSheetBody", "description": "Stylesheet contents for the specified <code>styleSheetId</code>." }
+                ],
+                "description": "Returns stylesheet data for the specified <code>styleSheetId</code>."
             },
             {
                 "name": "getStyleSheetText",
@@ -965,9 +1103,10 @@
                     { "name": "styleSheetId", "type": "string" }
                 ],
                 "returns": [
-                    { "name": "url", "type": "string" },
-                    { "name": "text", "type": "string" }
-                ]
+                    { "name": "url", "type": "string", "description": "The stylesheet resource URL." },
+                    { "name": "text", "type": "string", "description": "The stylesheet text." }
+                ],
+                "description": "Returns the current textual content and the URL for a stylesheet."
             },
             {
                 "name": "setStyleSheetText",
@@ -976,8 +1115,9 @@
                     { "name": "text", "type": "string" }
                 ],
                 "returns": [
-                    { "name": "success", "type": "boolean" }
-                ]
+                    { "name": "success", "type": "boolean", "description": "Whether the modification was successful." }
+                ],
+                "description": "Sets the new stylesheet text, thereby invalidating all existing <code>CSSStyleId</code>'s and <code>CSSRuleId</code>'s contained by this stylesheet."
             },
             {
                 "name": "setPropertyText",
@@ -988,8 +1128,9 @@
                     { "name": "overwrite", "type": "boolean" }
                 ],
                 "returns": [
-                    { "name": "style", "$ref": "CSSStyle" }
-                ]
+                    { "name": "style", "$ref": "CSSStyle", "description": "The resulting style after the property text modification." }
+                ],
+                "description": "Sets the new <code>text</code> for a property in the respective style, at offset <code>propertyIndex</code>. If <code>overwrite</code> is <code>true</code>, a property at the given offset is overwritten, otherwise inserted. <code>text</code> entirely replaces the property <code>name: value</code>."
             },
             {
                 "name": "toggleProperty",
@@ -999,8 +1140,9 @@
                     { "name": "disable", "type": "boolean" }
                 ],
                 "returns": [
-                    { "name": "style", "$ref": "CSSStyle" }
-                ]
+                    { "name": "style", "$ref": "CSSStyle", "description": "The resulting style after the property toggling." }
+                ],
+                "description": "Toggles the property in the respective style, at offset <code>propertyIndex</code>. The <code>disable</code> parameter denotes whether the property should be disabled (i.e. removed from the style declaration). If <code>disable == false</code>, the property gets put back into its original place in the style declaration."
             },
             {
                 "name": "setRuleSelector",
@@ -1009,8 +1151,9 @@
                     { "name": "selector", "type": "string" }
                 ],
                 "returns": [
-                    { "name": "rule", "$ref": "CSSRule" }
-                ]
+                    { "name": "rule", "$ref": "CSSRule", "description": "The resulting rule after the selector modification." }
+                ],
+                "description": "Modifies the rule selector."
             },
             {
                 "name": "addRule",
@@ -1019,14 +1162,16 @@
                     { "name": "selector", "type": "string" }
                 ],
                 "returns": [
-                    { "name": "rule", "$ref": "CSSRule" }
-                ]
+                    { "name": "rule", "$ref": "CSSRule", "description": "The newly created rule." }
+                ],
+                "description": "Creates a new empty rule with the given <code>selector</code> in a special \"inspector\" stylesheet in the owner document of the context node."
             },
             {
                 "name": "getSupportedCSSProperties",
                 "returns": [
-                    { "name": "cssProperties", "type": "array", "items": { "type": "string" } }
-                ]
+                    { "name": "cssProperties", "type": "array", "items": { "type": "string" }, "description": "Supported property names." }
+                ],
+                "description": "Returns all supported CSS property names."
             }
         ]
     },
