@@ -1,3 +1,12 @@
+2011-03-30  Alexander Pavlov  <apavlov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: document CSS agent.
+        https://bugs.webkit.org/show_bug.cgi?id=57435
+
+        * inspector/Inspector.json:
+
 2011-03-31  Andrey Kosyakov  <caseq@chromium.org>
 
         Reviewed by Yury Semikhatsky.
